reset img fix inline-block spacing

--- a/src/styles/core/_reset.less
+++ b/src/styles/core/_reset.less
@@ -44,6 +44,7 @@ button {
 
 img {
   display: inline-block;
+  vertical-align: top; // fix inline-block spacing
 }
 
 h1, h2, h3, h4, h5, h6, p {
